--- a/software-solutions.html
+++ b/software-solutions.html
@@ -507,36 +507,39 @@
 
         <!-- Header Section Start -->
         <!-- Navbar Section Start -->
-         <nav class="navbar">
-             <a href="index.html" class="nav-brand">
-                <img src="assets/Images/logo/iq-white.png" class="png-white" alt="LOGO">
-                <img src="assets/Images/logo/iq.png" class="png-red" alt="LOGO">
-            </a>
-            <div class="nav-menus">
-                <div class="nav-social-icons">
-                    <a href="tel:+917538857567" target="_blank" class="social-links">
-                        <i class="fa-solid fa-phone"></i>
-                    </a>
-                    <a href="https://wa.me/+917538857567" target="_blank" class="social-links">
-                        <i class="fa-brands fa-whatsapp"></i>
-                    </a>
-                    <a href="#" target="_blank" class="social-links">
-                        <i class="fa-brands fa-skype"></i>
-                    </a>
-                    <a href="mailto:info@iqtechway.com" target="_blank" class="social-links">
-                        <i class="fa-solid fa-envelope"></i>
-                    </a>
+        <nav class="navbar">
+            <div class="navbar-container container">
+                <a href="index.html" class="nav-brand">
+                    <img src="assets/Images/logo/iq-white.png" class="png-white" alt="LOGO">
+                    <img src="assets/Images/logo/iq.png" class="png-red" alt="LOGO">
+                </a>
+                <div class="nav-menus">
+                    <div class="nav-social-icons">
+                        <a href="tel:+917538857567" target="_blank" class="social-links">
+                            <i class="fa-solid fa-phone"></i>
+                        </a>
+                        <a href="https://wa.me/+917538857567" target="_blank" class="social-links">
+                            <i class="fa-brands fa-whatsapp"></i>
+                        </a>
+                        <a href="#" target="_blank" class="social-links">
+                            <i class="fa-brands fa-skype"></i>
+                        </a>
+                        <a href="mailto:info@iqtechway.com" target="_blank" class="social-links">
+                            <i class="fa-solid fa-envelope"></i>
+                        </a>
+                    </div>
+                    <div class="nav-buttons d-none d-lg-flex">
+                        <a href="contact.html">Get a Quote</a>
+                        <a href="join-team.html">Join Our Team</a>
+                    </div>
+                    <button class="hambrger">
+                        <span class="t-ham"></span>
+                        <span class="t-ham"></span>
+                        <span class="t-ham"></span>
+                    </button>
                 </div>
-                <div class="nav-buttons d-none d-lg-flex">
-                    <a href="contact.html">Get a Quote</a>
-                    <a href="join-team.html">Join Our Team</a>
-                </div>
-                <button class="hambrger">
-                    <span class="t-ham"></span>
-                    <span class="t-ham"></span>
-                    <span class="t-ham"></span>
-                </button>
             </div>
+
         </nav>
 
         <!-- Navbar Section End -->
