--- a/career.html
+++ b/career.html
@@ -403,7 +403,7 @@
 
         <!-- Header Section Start -->
         <!-- Navbar Section Start -->
-       <nav class="navbar">
+        <nav class="navbar">
             <div class="navbar-container container">
                 <a href="index.html" class="nav-brand">
                     <img src="assets/Images/logo/iq-white.png" class="png-white" alt="LOGO">
@@ -690,39 +690,40 @@
 
     <!--/////////////////////////// Technologies End ///////////////////////-->
 
+    
     <div class="faq-details container">
-        <h2>Frequently Asked Questions <br><span>Android App Development</span> </h2>
+        <h2>Frequently <span>Asked Questions</span> </h2>
         <div class="question-container">
             <div class="question">
-                <button id="button1">
-                    <span>How does Android App Development benefit my business?</span>
+                <button id="button">
+                    <span>1. What material or Content do you need to create a website?</span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
                 <p>
-                    The digitization of a business with the help of Top Android app companies in the World aids a
-                    business by putting it onto a global platform and make it available for global consumption.
+                    Your logo, pictures of your goods or services, and information about your company are all that are
+                    required to establish a website. You can also use the other resources you have, such as videos,
+                    price lists, pamphlets, and ebooks.44
                 </p>
             </div>
             <div class="question">
-                <button id="button1">
-                    <span> Why choose IQ Tech for Android App Development? </span>
+                <button id="button">
+                    <span> 2. What type of website is accurate for me? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
                 <p>
-                    IQ Tech is the leading Android App Development Company that cares about the clients and their
-                    experience. With 12+ years of experience and innovation, we have successfully developed 850+ diverse
-                    apps with the help of 200+ expert technicians. Thus, time-efficiency, cost-effectiveness is of
-                    utmost importance to us.</p>
+                    Your company will determine the best type of website for you. Obtain a complimentary consultation to
+                    determine which website is most appropriate for you. </p>
             </div>
             <div class="question">
-                <button id="button1">
+                <button id="button">
                     <span>
 
-                        What will be the expenditure to develop an android app with IQ Tech? </span>
+                        3. How quickly can you create my site? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
-                <p> Cost of android app development depends on the type of your project and strictly depends on the
-                    maintenance you expect after deployment. So, reach us to know the overall discounted cost. </p>
+                <p> It is feasible to build a website in just one day; yes, we can work quickly and deliver in
+                    accordance with your business requirements. Depending on the type selected, we send the sites in 5
+                    to 10 days on average. </p>
             </div>
 
         </div>
@@ -731,6 +732,10 @@
     </div>
 
     <!-- FAQ End  -->
+
+
+    <!-- FAQ End  -->
+
 
     <script>
 
@@ -1065,59 +1070,59 @@
         })(window, document, "static.olark.com/jsclient/loader.js");/* custom configuration goes here (www.olark.com/documentation) */olark.identify('9134-624-10-9995');</script>
     <!-- end olark code -->
 
- <!-- Mobile Responsive Social Icons Start -->
+    <!-- Mobile Responsive Social Icons Start -->
 
- <section class="mobile-social-icons">
-    <div class="mobile-social-container">
-        <div id="mobileToggler" class="mobile-social-toggler">
-            <span>
-                <i class="fa-solid fa-address-book fa-shake"></i>
-            </span>
-        </div>
-        <div class="mobile-toggler-menus">
-            <div class="mobile-menus-container">
-                <span style="--i:1;--bac:rgb(0, 81, 255);">
-                    <a href="tel:+917538857567" target="_blank" class="social-links">
-                        <i class="fa-solid fa-phone"></i>
-                    </a>
-                </span>
-                <span style="--i:2;--bac:green;">
-                    <a href="https://wa.me/+917538857567" target="_blank" class="social-links">
-                        <i class="fa-brands fa-whatsapp"></i>
-                    </a>
-                </span>
-                <span style="--i:3;--bac:rgb(74, 204, 255);">
-                    <a href="#" target="_blank" class="social-links">
-                        <i class="fa-brands fa-skype"></i>
-                    </a>
-                </span>
-                <span style="--i:4;--bac:rgb(0, 81, 255);">
-                    <a href="mailto:info@iqtechway.com" target="_blank" class="social-links">
-                        <i class="fa-solid fa-envelope"></i>
-                    </a>
+    <section class="mobile-social-icons">
+        <div class="mobile-social-container">
+            <div id="mobileToggler" class="mobile-social-toggler">
+                <span>
+                    <i class="fa-solid fa-address-book fa-shake"></i>
                 </span>
             </div>
+            <div class="mobile-toggler-menus">
+                <div class="mobile-menus-container">
+                    <span style="--i:1;--bac:rgb(0, 81, 255);">
+                        <a href="tel:+917538857567" target="_blank" class="social-links">
+                            <i class="fa-solid fa-phone"></i>
+                        </a>
+                    </span>
+                    <span style="--i:2;--bac:green;">
+                        <a href="https://wa.me/+917538857567" target="_blank" class="social-links">
+                            <i class="fa-brands fa-whatsapp"></i>
+                        </a>
+                    </span>
+                    <span style="--i:3;--bac:rgb(74, 204, 255);">
+                        <a href="#" target="_blank" class="social-links">
+                            <i class="fa-brands fa-skype"></i>
+                        </a>
+                    </span>
+                    <span style="--i:4;--bac:rgb(0, 81, 255);">
+                        <a href="mailto:info@iqtechway.com" target="_blank" class="social-links">
+                            <i class="fa-solid fa-envelope"></i>
+                        </a>
+                    </span>
+                </div>
 
+            </div>
         </div>
-    </div>
 
-    <script>
-        // Mobile Menus Teggler 
+        <script>
+            // Mobile Menus Teggler 
 
-        let mobileToggler = document.querySelector('.mobile-social-toggler');
-        let mobileTogglerMenus = document.querySelector('.mobile-toggler-menus');
+            let mobileToggler = document.querySelector('.mobile-social-toggler');
+            let mobileTogglerMenus = document.querySelector('.mobile-toggler-menus');
 
-        mobileToggler.addEventListener('click', () => {
-            mobileTogglerMenus.classList.toggle('mobResponsive');
-            mobileToggler.classList.toggle('ro45');
-        });
-
+            mobileToggler.addEventListener('click', () => {
+                mobileTogglerMenus.classList.toggle('mobResponsive');
+                mobileToggler.classList.toggle('ro45');
+            });
 
 
-    </script>
-</section>
 
-<!-- Mobile Responsive Social Icons End -->
+        </script>
+    </section>
+
+    <!-- Mobile Responsive Social Icons End -->
 
 
 
