--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
         <!-- banner section Start -->
 
         <div class="banner-section">
-            <h1>Custom <span> Mobile App </span> Development Solutions for your Business Success </h1>
+            <h1>High quality professional <span> software development </span> services </h1>
             <p>Over the years, the question has changed from why cloud to which cloud? Whether from an on-premises
                 server to Cloud or Cloud to Cloud.</p>
             <div class="banner-flex">
@@ -1498,48 +1498,88 @@
     <!--/////////////////////////// Technologies End ///////////////////////-->
 
     <div class="faq-details container">
-        <h2>Frequently <span>Asked Questions</span> </h2>
+        <h2>Software Development <span>FAQs</span> </h2>
         <div class="question-container">
             <div class="question">
                 <button id="button">
-                    <span>1. What material or Content do you need to create a website?</span>
+                    <span>1. Why should I opt for IQTechway as a software development service provider?</span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
-                <p>
-                    Your logo, pictures of your goods or services, and information about your company are all that are
-                    required to establish a website. You can also use the other resources you have, such as videos,
-                    price lists, pamphlets, and ebooks.44
-                </p>
+                <p>IqTechway stands as a distinguished CMMI Level 3 software and mobile app development company,
+                    committed to setting high standards within the software development industry. With extensive
+                    experience and proficiency, we offer a wide array of custom software development services adhering
+                    to the latest technological norms, greatly benefiting numerous businesses. Our adept software
+                    development professionals specialize in Agile methodologies, client-focused engagement models,
+                    rigorous quality protocols, profound technical and domain expertise, and comprehensive knowledge
+                    across various software development frameworks, programming languages, and platforms. This
+                    collective expertise enables us to deliver top-notch web software solutions.</p>
             </div>
             <div class="question">
                 <button id="button">
-                    <span> 2. What type of website is accurate for me? </span>
+                    <span> 2. As a Software development Firm, What Software development Services do you offer? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
-                <p>
-                    Your company will determine the best type of website for you. Obtain a complimentary consultation to
-                    determine which website is most appropriate for you. </p>
+                <p>We provide full-scale software development services like custom software development, web app
+                    development, mobile app development, software testing, and similar services. Our robust software
+                    development process ensures that everything within our software development services is done in a
+                    clean manner to provide top-notch services.</p>
             </div>
             <div class="question">
                 <button id="button">
                     <span>
 
-                        3. How quickly can you create my site? </span>
+                        3. Do you sign an NDA? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
-                <p> It is feasible to build a website in just one day; yes, we can work quickly and deliver in
-                    accordance with your business requirements. Depending on the type selected, we send the sites in 5
-                    to 10 days on average. </p>
+                <p> Yes, we do sign an NDA- Non disclosure agreement before initializing the project services to
+                    eliminate the possibility of any unethical data breaches and safeguard IPs and vital data of
+                    companies.</p>
             </div>
+            <div class="question">
+                <button id="button">
+                    <span>4.Which technologies do you use to develop Software and Web Application?</span>
+                    <span><i class="fa-solid fa-plus fa-lg"></i></span>
+                </button>
+                <p>We offer a variety of web and software development services that are inclusive of a range of
+                    technologies, diversified frameworks and programming languages. However, the selection of technology
+                    stack is completely dependent on the client for their project as to what brings the best of business
+                    performance for them. Although, we suggest and assist businesses by analyzing their business
+                    requirements, budget, future demands and available technology stack.</p>
+            </div>
+            <div class="question">
+                <button id="button">
+                    <span> 5. What different hiring models do you offer for software development? </span>
+                    <span><i class="fa-solid fa-plus fa-lg"></i></span>
+                </button>
+                <p>IqTechway is a client-focused software development firm that primarily provides two types of hiring
+                    models for software engagement. <br> <br> <br>
+                    <strong style="color: var(--white);">Dedicated Development Team/Staff Augmentation Model</strong>
+                    <br>In this model, businesses can have access to a specialized dedicated team for the long-term by screening them on the basis of matching experience and skillset. <br><br>
+                    <strong style="color: var(--white);">Fixed-Price Model</strong><br>
+                    In this model, the time frame and budget are fixed by the client and the service provider to match the criteria and achieve short-term goals.
+                </p>
+               
 
+
+            </div>
+            <div class="question">
+                <button id="button">
+                    <span>
+
+                        6. Do you provide maintenance of custom software solutions? </span>
+                    <span><i class="fa-solid fa-plus fa-lg"></i></span>
+                </button>
+                <p>We are a full-service software development company providing design, development, deployment &
+                    maintenance services. Sustaining a software application is equally important as developing as it
+                    keeps the application healthy and relevant. Our maintenance services include feature enhancements,
+                    optimization, bug fixing, and preventive maintenance. </p>
+            </div>
         </div>
 
 
     </div>
 
     <!-- FAQ End  -->
-
-
 
     <!-- Testimonial Section STart -->
 
@@ -1961,12 +2001,15 @@
         </div>
         <div class="footer-boxes">
             <div class="footer-first">
-                <h5>INTERNATIONAL SERVICE</h5>
+                <h5>WEB DEVELOPMENT</h5>
+
                 <ul>
-                    <li><a href="digital-marketing.html">Digital Marketing</a></li>
-                    <li><a href="seo-copy-writing.html">SEO Agency</a></li>
-                    <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
-                    <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
+                    <li><a href="frontend.html">Frontend</a></li>
+                    <li><a href="php.html"> PHP Backend </a></li>
+                    <li><a href="java.html"> Java </a></li>
+                    <li><a href="nodejs.html"> Node.js </a></li>
+                    <li><a href="dotNet.html"> .Net </a></li>
+                    <li><a href="typeScript.html"> Typescript </a></li>
                 </ul>
             </div>
             <div class="footer-first">
@@ -1987,14 +2030,20 @@
         </div>
         <div class="footer-boxes">
             <div class="footer-first">
-                <h5>SERVICES</h5>
+                <h5>ONLINE MARKETING</h5>
+
+
+
                 <ul>
-                    <li><a href="ui-ux-design.html">UI/UX Design</a></li>
-                    <li><a href="android-app.html">Android App</a></li>
-                    <li><a href="frontend.html">Frontend Development</a></li>
-                    <li><a href="seo.html">SEO Services</a></li>
-                    <li><a href="digital-marketing.html">Digital Marketing</a></li>
-                    <li><a href="wordpress.html">WordPress Development</a></li>
+
+                    <li><a href="seo.html"> SEO Services </a></li>
+                    <li><a href="search-engine-marketing.html"> Search Engine Marketing </a></li>
+                    <li><a href="social-media-marketing.html"> Social Media Marketing </a></li>
+                    <li><a href="pay-per-click.html"> Pay Per Click Management </a></li>
+                    <li><a href="seo-copy-writing.html"> SEO Copy Writing </a></li>
+                    <li><a href="digital-marketing.html"> Digital Marketing </a></li>
+                    <li><a href="brand-consulting.html"> Brand Consulting </a></li>
+                    <li><a href="lead-management.html">Lead Management System </a></li>
                 </ul>
             </div>
 
@@ -2016,14 +2065,16 @@
 
         <div class="footer-boxes">
             <div class="footer-first">
-                <h5>QUICK LINKS</h5>
+                <h5>CUSTOM SOFTWARE</h5>
                 <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="case-studies.html">Case Studies</a></li>
-                    <li><a href="hire.html">Hire</a></li>
-                    <li><a href="career.html">Career</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="ai-machine-learning.html"> AI and Machine Learning</a></li>
+                    <li><a href="crm-development.html">CRM Development</a></li>
+                    <li><a href="erp-software.html">ERP Software</a></li>
+                    <li><a href="cloud-app.html">Cloud App</a></li>
+                    <li><a href="product-development.html">Product Development</a></li>
+                    <li><a href="nft-marketplace.html">NFT marketplace </a></li>
+                    <li><a href="web-app.html"> WebApp </a></li>
+                    <li><a href="application-development.html"> Application Development </a></li>
                 </ul>
             </div>
             <div class="footer-first">
@@ -2455,12 +2506,14 @@
 
         const buttons = document.querySelectorAll("#button");
 
+
         buttons.forEach(button => {
             button.addEventListener('click', () => {
                 const faq = button.nextElementSibling;
                 const icon = button.children[1];
 
                 faq.classList.toggle('show');
+                show2.classList.toggle('show');
                 icon.classList.toggle('rotate');
             })
         })
